# rust-cloud

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md  course.manifest.json
.github/workflows/: rust.yml
assets/: README.md
benches/: README.md
diagrams/: 01-modelos-de-servicio.mmd  02-computo.mmd  03-almacenamiento.mmd  04-redes-y-vpc.mmd  05-identidad-y-accesos.mmd  06-servicios-manejados.mmd  07-serverless.mmd  08-costos-y-finops.mmd  09-aws-en-la-practica.mmd  10-gcp-en-la-practica.mmd  README.md  course-map.mmd
docs/: 00-introduccion.md  01-modelos-de-servicio.md  02-computo.md  03-almacenamiento.md  04-redes-y-vpc.md  05-identidad-y-accesos.md  06-servicios-manejados.md  07-serverless.md  08-costos-y-finops.md  09-aws-en-la-practica.md  10-gcp-en-la-practica.md  SUMMARY.md  bitacora-revision-diferida.md  checklist-revision-capitulo.md  compuertas-automaticas.md  guia-revision-corte.md  higiene-ramas-prs.md  manifiesto-academy-web.md  mapa-global.md  navegacion-y-enlaces.md  paquete-revision-humana.md  publicacion-candidata.md
docs/costos/: 01-modelos-de-servicio.md  02-computo.md  03-almacenamiento.md  04-redes-y-vpc.md  05-identidad-y-accesos.md  06-servicios-manejados.md  07-serverless.md  08-costos-y-finops.md  09-aws-en-la-practica.md  10-gcp-en-la-practica.md
docs/ejercicios/: 01-modelos-de-servicio.md  02-computo.md  03-almacenamiento.md  04-redes-y-vpc.md  05-identidad-y-accesos.md  06-servicios-manejados.md  07-serverless.md  08-costos-y-finops.md  09-aws-en-la-practica.md  10-gcp-en-la-practica.md
examples/: README.md  aws_practice.rs  compute.rs  finops.rs  gcp_practice.rs  iam.rs  managed_services.rs  networking.rs  serverless.rs  service_models.rs  storage.rs
examples/soluciones/: aws_practice_nivel_1.rs  aws_practice_nivel_2.rs  aws_practice_nivel_3.rs  compute_nivel_1.rs  compute_nivel_2.rs  compute_nivel_3.rs  finops_nivel_1.rs  finops_nivel_2.rs  finops_nivel_3.rs  gcp_practice_nivel_1.rs  gcp_practice_nivel_2.rs  gcp_practice_nivel_3.rs  iam_nivel_1.rs  iam_nivel_2.rs  iam_nivel_3.rs  managed_services_nivel_1.rs  managed_services_nivel_2.rs  managed_services_nivel_3.rs  networking_nivel_1.rs  networking_nivel_2.rs  networking_nivel_3.rs  serverless_nivel_1.rs  serverless_nivel_2.rs  serverless_nivel_3.rs  service_models_nivel_1.rs  service_models_nivel_2.rs  service_models_nivel_3.rs  storage_nivel_1.rs  storage_nivel_2.rs  storage_nivel_3.rs
scripts/: verify-cargo-examples.mjs  verify-chapter-anatomy.mjs  verify-course-links.mjs  verify-deferred-review-log.mjs  verify-editorial-status.mjs  verify-gate-sync.mjs  verify-manifest-consistency.mjs  verify-review-packet-coverage.mjs
src/: aws_practice.rs  compute.rs  finops.rs  gcp_practice.rs  iam.rs  lib.rs  managed_services.rs  networking.rs  serverless.rs  service_models.rs  storage.rs
tests/: README.md  aws_practice.rs  compute.rs  finops.rs  gcp_practice.rs  iam.rs  managed_services.rs  networking.rs  serverless.rs  service_models.rs  storage.rs
