[package]
name = "rust-cloud"
version = "0.1.0"
edition = "2024"
description = "Curso de Cloud de Jeresoft Academy: fundamentos de plataformas, operación y costos."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-cloud"
readme = "README.md"
keywords = ["cloud", "rust", "academy", "aws", "gcp"]
categories = ["development-tools"]

[dependencies]

[[example]]
name = "service_models_nivel_1"
path = "examples/soluciones/service_models_nivel_1.rs"

[[example]]
name = "service_models_nivel_2"
path = "examples/soluciones/service_models_nivel_2.rs"

[[example]]
name = "service_models_nivel_3"
path = "examples/soluciones/service_models_nivel_3.rs"

[[example]]
name = "compute_nivel_1"
path = "examples/soluciones/compute_nivel_1.rs"

[[example]]
name = "compute_nivel_2"
path = "examples/soluciones/compute_nivel_2.rs"

[[example]]
name = "compute_nivel_3"
path = "examples/soluciones/compute_nivel_3.rs"

[[example]]
name = "storage_nivel_1"
path = "examples/soluciones/storage_nivel_1.rs"

[[example]]
name = "storage_nivel_2"
path = "examples/soluciones/storage_nivel_2.rs"

[[example]]
name = "storage_nivel_3"
path = "examples/soluciones/storage_nivel_3.rs"

[[example]]
name = "networking"
path = "examples/networking.rs"

[[example]]
name = "iam"
path = "examples/iam.rs"

[[example]]
name = "iam_nivel_1"
path = "examples/soluciones/iam_nivel_1.rs"

[[example]]
name = "iam_nivel_2"
path = "examples/soluciones/iam_nivel_2.rs"

[[example]]
name = "iam_nivel_3"
path = "examples/soluciones/iam_nivel_3.rs"

[[example]]
name = "managed_services"
path = "examples/managed_services.rs"

[[example]]
name = "managed_services_nivel_1"
path = "examples/soluciones/managed_services_nivel_1.rs"

[[example]]
name = "managed_services_nivel_2"
path = "examples/soluciones/managed_services_nivel_2.rs"

[[example]]
name = "managed_services_nivel_3"
path = "examples/soluciones/managed_services_nivel_3.rs"

[[example]]
name = "serverless"
path = "examples/serverless.rs"

[[example]]
name = "finops"
path = "examples/finops.rs"

[[example]]
name = "aws_practice"
path = "examples/aws_practice.rs"

[[example]]
name = "gcp_practice"
path = "examples/gcp_practice.rs"

[[example]]
name = "aws_practice_nivel_1"
path = "examples/soluciones/aws_practice_nivel_1.rs"

[[example]]
name = "aws_practice_nivel_2"
path = "examples/soluciones/aws_practice_nivel_2.rs"

[[example]]
name = "aws_practice_nivel_3"
path = "examples/soluciones/aws_practice_nivel_3.rs"

[[example]]
name = "finops_nivel_1"
path = "examples/soluciones/finops_nivel_1.rs"

[[example]]
name = "finops_nivel_2"
path = "examples/soluciones/finops_nivel_2.rs"

[[example]]
name = "finops_nivel_3"
path = "examples/soluciones/finops_nivel_3.rs"

[[example]]
name = "serverless_nivel_1"
path = "examples/soluciones/serverless_nivel_1.rs"

[[example]]
name = "serverless_nivel_2"
path = "examples/soluciones/serverless_nivel_2.rs"

[[example]]
name = "serverless_nivel_3"
path = "examples/soluciones/serverless_nivel_3.rs"

[[example]]
name = "networking_nivel_1"
path = "examples/soluciones/networking_nivel_1.rs"

[[example]]
name = "networking_nivel_2"
path = "examples/soluciones/networking_nivel_2.rs"

[[example]]
name = "networking_nivel_3"
path = "examples/soluciones/networking_nivel_3.rs"
